--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.container1 {
+        min-height: 10em;
+        display: table-cell;
+        vertical-align: middle;
+    }
